--- a/src/app/components/cancertypes/cancertype.component.html
+++ b/src/app/components/cancertypes/cancertype.component.html
@@ -1,5 +1,6 @@
-<ul class="breadcrumb">   
+<ul class="breadcrumb">
 <p-breadcrumb [style]="" [model]="crumbs" ></p-breadcrumb>
+  <button class="btn btn-primary pull-right bread-crumb-button" (click)="showAddSubCancerType()">Add SUBCANCER</button>
 </ul>
 
 <div class="pad20"></div>
@@ -9,7 +10,7 @@
       <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12">
         <div class="card">
           <div class="card-header">
-          <button class="btn btn-primary pull-right" (click)="showAddCancerType()">Add CancerType</button>
+          <button class="btn btn-primary pull-right" (click)="showAddCancerType()">Add {{addButtonName}}</button>
           </div>
           <div class="card-block">
             <div class="table-responsive">
@@ -52,6 +53,11 @@
 <app-addcancertypes *ngIf="isAddCancerTypeModal" (onHide)="onHide('add')" [config]="{ show: true }" bsModal
                      #addModal="bs-modal" (yes)="addCancerTypes($event)" (cancel)="onClose('add')" class="modal fade"
                      [Error]="addCancerTypeError"></app-addcancertypes>
+
+<app-addsubcancertypes *ngIf="isAddSubCancerTypeModal" (onHide)="onHide('add')" [config]="{ show: true }" bsModal
+                       #addModal="bs-modal" (yes)="addCancerTypes($event)" (cancel)="onClose('add')" class="modal fade"
+                       [Error]="addCancerTypeError"></app-addsubcancertypes>
+
 
 <app-editcancertypes *ngIf="isEditModal" (onHide)="onHide('edit')" [config]="{ show: true }" bsModal
                  #editModal="bs-modal" (yes)="editCancerTypes($event)" (cancel)="onClose('edit')" class="modal fade" [CancerType]="CancerType"></app-editcancertypes>
