--- a/src/app/modals/addsubcancertypes/addsubcancertypes.component.html
+++ b/src/app/modals/addsubcancertypes/addsubcancertypes.component.html
@@ -12,11 +12,11 @@
           <label class="form-control-label">Sub CancerType Title</label>
           <ck-editor name="editor1" type="text" class="form-control" [(ngModel)]="CancerType.title" skin="moono-lisa" language="en"></ck-editor>
         </div>
-        <div class="form-group">
+        <div class="form-group" *ngFor="let key of dropDownForm?.controls | keys">
           <label class="form-control-label">Select SubCancer Types</label>
-          <select class="form-control" (change)="onSelect($event.target.value)" required>
-            <option>Select Your Patient Type</option>
-            <option *ngFor="let cancerType of CancerTypes" [value]="cancerType.patienttypeid">{{cancerType.title}}</option>
+          <select class="form-control" (change)="onSelect({key: key, value: $event.target.value})" required>
+            <option>Select Your Patient Type; {{key}}</option>
+            <option *ngFor="let cancerType of cancerTreeService.cancer[key]" [value]="cancerType.id">{{cancerType.title}}</option>
           </select>
         </div>
       </form>
