--- a/src/app/components/cancertypes/cancertype.component.html
+++ b/src/app/components/cancertypes/cancertype.component.html
@@ -1,5 +1,5 @@
-<ul class="breadcrumb">
-<p-breadcrumb [style]="" (itemClick)="routeToPage(event, item)" [model]="crumbs" ></p-breadcrumb>
+<ul class="breadcrumb b-c-container">
+  <p-breadcrumb class="bread-crumb-container" [model]="crumbs" ></p-breadcrumb>
   <button class="btn btn-primary pull-right bread-crumb-button" (click)="showAddSubCancerType()">Add {{cancerTree.getNextItemName()}}</button>
 </ul>
 
