--- a/src/app/components/patients/patients.component.css
+++ b/src/app/components/patients/patients.component.css
@@ -35,9 +35,20 @@ ul.breadcrumb[_ngcontent-yqc-c0] {
   background-color: lightgoldenrodyellow;
 }
 
+.bread-crumb-container {
+  width: 90%;
+}
 .card-header {
   padding: 0.75rem 1.25rem;
   margin-bottom: 0;
   background-color: white;
   border-bottom: 1px solid #c2cfd6;
+}
+
+.b-c-container {
+  display: flex;
+}
+
+.button-right {
+  align-self: end;
 }
