--- a/src/app/components/cancertypes/cancertype.component.html
+++ b/src/app/components/cancertypes/cancertype.component.html
@@ -10,14 +10,18 @@
       <div class="col-sm-12 col-md-12 col-xs-12 col-lg-12">
         <div class="card">
           <div class="card-header">
-          <button class="btn btn-primary pull-right" (click)="showAddCancerType()">Add {{cancerTree.getCurrentLevel()}}</button>
+
+            <div class="pull-right">
+              <button class="btn btn-primary m-10" (click)="showAddRegimen()">Add Regimen
+            </button>
+              <button class="btn btn-primary m-10" (click)="showAddCancerType()">Add {{cancerTree.getCurrentLevel()}}</button>
+            </div>
           </div>
           <div class="card-block">
             <div class="table-responsive">
               <table class="table table-hover">
                 <thead>
                 <tr>
-                  <th>PatientType Id</th>
                   <th>Cancer Type</th>
                   <th *ngIf="cancerTree?.getCurrentLevel() === 'SUBCANCER1TYPE'">Sub Type</th>
                   <th>Edit</th>
@@ -26,9 +30,8 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let cancerType of CancerTypes">
-                  <td >{{cancerType.patientType}}</td>
                   <td >                         <a  href="javascript:void(0)" (click)="getUrlFix(cancerType.id)">{{cancerType.title}}</a></td>
-                  <td>
+                  <td *ngIf="cancerTree?.getCurrentLevel() === 'SUBCANCER1TYPE'">
                     <span class="badge badge-primary regimen-type-badge"
                           *ngFor="let type of generateTreeNodesForRegimens(cancerType?.regimenDetails)"
                           [routerLink]="'/regimenDetails/' + cancerType?.id +'/'+ type">
@@ -73,3 +76,8 @@
 
 <app-deletecancertypes *ngIf="isDeleteModal" (onHide)="onHide('delete')" [config]="{ show: true }" bsModal
                    #deleteModal="bs-modal" (yes)="deleteCancerTypes($event)" (cancel)="onClose('delete')" class="modal fade" [CancerType]="CancerType"></app-deletecancertypes>
+
+<app-addregimen *ngIf="displayAddRegimen" (onHide)="onHide('add')" [config]="{ show: true }" bsModal
+                [cancers]="CancerTypes"
+                #addModal="bs-modal" (yes)="addRegimenDetail($event)" (cancel)="onClose('regimen')" class="modal fade"
+></app-addregimen>
