--- a/src/app/components/patients/patients.component.html
+++ b/src/app/components/patients/patients.component.html
@@ -1,6 +1,6 @@
 <ul class="breadcrumb b-c-container">
 <p-breadcrumb class="bread-crumb-container" [model]="crumbs" ></p-breadcrumb>
-<button class="btn btn-primary button-right" (click)="goToAllRegiments()">All Regiments</button>
+<button class="btn btn-primary button-right" (click)="goToAllRegiments()">All Regimens</button>
 </ul>
 
 <div class="pad20"></div>
