--- a/src/app/modals/addregimendetail/addregimen.component.html
+++ b/src/app/modals/addregimendetail/addregimen.component.html
@@ -36,6 +36,13 @@
           <label class="form-control-label">Brand Names</label>
           <input type="text" class="form-control" placeholder="Occupation" name="occupation" [(ngModel)]="RegimenDetail.brandNames">
         </div>
+        <div class="form-group" *ngIf="cancers?.length > 0">
+          <label class="form-control-label">Select Cancer Type</label>
+          <select class="form-control" (change)="onCancerTypeSelected($event?.target?.value)" required>
+            <option>Select Cancer Type</option>
+            <option *ngFor="let  cancer of cancers" [value]="cancer?.id">{{cancer?.title}}</option>
+          </select>
+        </div>
         <div class="form-group">
           <label class="form-control-label">Regimen Type</label>
           <p-dropdown [options]="levelOptions" [(ngModel)]="RegimenDetail.regimenType" [ngModelOptions]="{standalone: true}" editable="true" placeholder="Select a regimen type"></p-dropdown>
