--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,3 +15,7 @@
 
 // Custom styles
 @import "custom";
+
+@import '~primeicons/primeicons.css';
+@import '~primeng/resources/themes/nova-light/theme.css';
+@import '~primeng/resources/primeng.min.css';
