--- a/src/app/modals/addsubcancertypes/addsubcancertypes.component.html
+++ b/src/app/modals/addsubcancertypes/addsubcancertypes.component.html
@@ -10,7 +10,7 @@
       <form class="form">
         <div class="form-group">
           <label class="form-control-label">Sub CancerType Title</label>
-          <ck-editor name="editor1" type="text" class="form-control" [(ngModel)]="subCancerAddData.title" skin="moono-lisa" language="en"></ck-editor>
+            <input type="text" class="form-control" placeholder="Name" [(ngModel)]="subCancerAddData.title"   name="title" >
         </div>
       </form>
 
