--- a/src/app/modals/editcancertypes/editcancertypes.component.html
+++ b/src/app/modals/editcancertypes/editcancertypes.component.html
@@ -10,7 +10,7 @@
       <form class="form">
         <div class="form-group">
           <label class="form-control-label">CancerType Title</label>
-          <ck-editor name="editor1" class="form-control" [(ngModel)]="CancerType.title" skin="moono-lisa" language="en"></ck-editor>
+          <input type="text" class="form-control" placeholder="Name" [(ngModel)]="CancerType.title"   name="title" >
         </div>
       </form>
       <div class="form-group">
