--- a/src/app/modals/editsubcancertypes/editsubcancertypes.component.html
+++ b/src/app/modals/editsubcancertypes/editsubcancertypes.component.html
@@ -10,7 +10,7 @@
       <form class="form">
         <div class="form-group">
           <label class="form-control-label">SubCancerType Title</label>
-          <ck-editor name="editor1" type="text" class="form-control" [(ngModel)]="SubCancerType.title" skin="moono-lisa" language="en"></ck-editor>
+          <input type="text" class="form-control" placeholder="Name" [(ngModel)]="SubCancerType.title"   name="title" >
         </div>
       </form>
     </div>
