--- a/src/app/components/patients/patients.component.html
+++ b/src/app/components/patients/patients.component.html
@@ -26,7 +26,7 @@
                 <tbody>
                 <tr *ngFor="let patient of Patients, let i= index">
                   <td>{{patient.id}}</td>
-                  <td ><u [routerLink]="['/cancerTypes',patient.id]">{{patient.title}}</u></td>
+                  <td ><a href="javascript:void(0)" [routerLink]="['/cancerTypes',patient.id]">{{patient.title}}</a></td>
                   <td>
                     <i class="fa fa-pencil" data-toggle="tooltip" placement="top" tooltip="Edit Patient"
                        (click)="edit(patient)"></i>
