--- a/src/app/modals/editregimendetail/editregimen.component.html
+++ b/src/app/modals/editregimendetail/editregimen.component.html
@@ -39,6 +39,12 @@
           <label class="form-control-label">Brand Names</label>
           <textarea type="textarea" class="form-control" placeholder="brandNames" name="brandNames" [(ngModel)]="RegimenDetail.brandNames"></textarea>
         </div>
+        <div class="form-group">
+          <label class="form-control-label">Regimen Type</label>
+          <p-dropdown [options]="levelOptions" [(ngModel)]="RegimenDetail.regimenType" [ngModelOptions]="{standalone: true}"
+                      editable="true" placeholder="Select a regimen type"></p-dropdown>
+          <a href="javascript:void(0)" (click)="displayLevelTypeModal()">view levels</a>
+        </div>
         <div class="form-group regimen-cancer-select-container">
           <label class="form-control-label">Associate to Cancer</label>
           <p-multiSelect [panelStyle]="{minWidth: '250px'}"
