--- a/src/app/modals/addcancertypes/addcancertypes.component.html
+++ b/src/app/modals/addcancertypes/addcancertypes.component.html
@@ -2,7 +2,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <h4 class="modal-title pull-left">Add Cancer Type</h4>
-      <button type="button" class="close pull-right" aria-label="Close" (click)="close()">
+      <button type="button" class="close pull-right" aria-label="Close" (click)="close($event)">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
