--- a/src/app/modals/deleteregimendetail/deleteregimen.component.html
+++ b/src/app/modals/deleteregimendetail/deleteregimen.component.html
@@ -7,7 +7,7 @@
       </button>
     </div>
     <div class="modal-body">
-      <h3>Are you sure to delete {{RegimenDetail.dispName}} ?</h3>
+      <h3>Are you sure to delete {{regimen.dispName}} ?</h3>
     </div>
     <div class="modal-footer">
       <button class="btn btn-default" (click)="close($event)">Cancel</button>
