--- a/src/app/modals/editregimendetail/editregimen.component.html
+++ b/src/app/modals/editregimendetail/editregimen.component.html
@@ -19,7 +19,7 @@
         <div class="form-group">
           <label class="form-control-label">Schedule</label>
           <ck-editor name="editor1" type="text" class="form-control" [(ngModel)]="RegimenDetail.schedule" skin="moono-lisa" language="en"></ck-editor>
-          <!--          <input type="text" class="form-control" placeholder="Lastname" name="lastname" [(ngModel)]="RegimenDetail.schedule">-->
+          <!--          <input type="text" class="form-control" placeholder="Lastname" name="lastname" [(ngModel)]="regimen.schedule">-->
         </div>
         <div class="form-group">
           <label class="form-control-label">Emetogenic Potential</label>
