added link regimen modal to add regimen from cancer screen removed ability to add regimen to cancer from edit regimen detail screen changed wording medicine to regimen removed middle name attribute from regimen since it was redundant

--- a/src/app/components/cancertypes/cancertype.component.html
+++ b/src/app/components/cancertypes/cancertype.component.html
@@ -110,10 +110,14 @@
                  class="modal fade" [RegimenDetail]="RegimenDetail"></app-editregimen>
 
 <app-deleteregimen *ngIf="isDeleteRegimenModal" (onHide)="onHide('deleteRegimen')" [config]="{ show: true }" bsModal
-                   #deleteRegimenModal="bs-modal" (yes)="regimenDetailComponent.deleteRegimenDetail($event)" (cancel)="onClose('deleteRegimen')"
+                   #deleteRegimenModal="bs-modal" (yes)="removeRegimenFromCancer(RegimenDetail)" (cancel)="onClose('deleteRegimen')"
                    class="modal fade" [regimen]="RegimenDetail"></app-deleteregimen>
-<link-caner-regimen-modal *ngIf="showLinkRegimenModal" (closeModal)="showLinkRegimen(false)" [config]="{ show: true }" bsModal
+<link-caner-regimen-modal *ngIf="showLinkRegimenModal"
+                          (closeModal)="showLinkRegimen(false)"
+                          [config]="{ show: true }"
+                          bsModal
                           (cancel)="showLinkRegimen(false)"
+                          (onHide)="showLinkRegimen(false)"
                           class="modal fade"></link-caner-regimen-modal>
 <p-progressBar mode="indeterminate" *ngIf="isLoading"></p-progressBar>
 
