--- a/src/app/components/regimendetails/regimendetails.component.html
+++ b/src/app/components/regimendetails/regimendetails.component.html
@@ -23,11 +23,11 @@
                 <tr *ngFor="let regimenDetail of RegimenDetails">
                   <td >{{regimenDetail.dispName}}</td>
                   <td>
-                    <i class="fa fa-pencil" data-toggle="tooltip" placement="top" tooltip="Edit Medicine"
+                    <i class="fa fa-pencil" data-toggle="tooltip" placement="top" tooltip="Edit Regimen"
                        (click)="edit(regimenDetail)"></i>
                   </td>
                   <td>
-                    <i class="fa fa-trash" data-toggle="tooltip" placement="top" tooltip="Delete Medicine"
+                    <i class="fa fa-trash" data-toggle="tooltip" placement="top" tooltip="Delete Regimen"
                        (click)="delete(regimenDetail)"></i>
                   </td>
                 </tr>
