--- a/src/app/modals/deletesubcancertypes/deletesubcancertypes.component.html
+++ b/src/app/modals/deletesubcancertypes/deletesubcancertypes.component.html
@@ -1,7 +1,7 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h4 class="modal-title pull-left">Delete Medicine</h4>
+      <h4 class="modal-title pull-left">Delete Sub Cancer</h4>
       <button type="button" class="close pull-right" aria-label="Close" (click)="close($event)">
         <span aria-hidden="true">&times;</span>
       </button>
