--- a/src/app/modals/deleteregimendetail/deleteregimen.component.html
+++ b/src/app/modals/deleteregimendetail/deleteregimen.component.html
@@ -1,13 +1,16 @@
 <div class="modal-dialog">
   <div class="modal-content">
     <div class="modal-header">
-      <h4 class="modal-title pull-left">Delete Medicine</h4>
+      <h4 class="modal-title pull-left">Delete Regimen</h4>
       <button type="button" class="close pull-right" aria-label="Close" (click)="close($event)">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <div class="modal-body">
+    <div class="modal-body" *ngIf="!isOnCancerDetailPage">
       <h3>Are you sure to delete {{regimen.dispName}} ?</h3>
+    </div>
+    <div class="modal-body" *ngIf="isOnCancerDetailPage && currentCancerTitle">
+      <h3>Are you sure to remove {{regimen.dispName}} from {{currentCancerTitle}}?</h3>
     </div>
     <div class="modal-footer">
       <button class="btn btn-default" (click)="close($event)">Cancel</button>
