--- a/src/app/modals/addregimendetail/addregimen.component.html
+++ b/src/app/modals/addregimendetail/addregimen.component.html
@@ -26,7 +26,8 @@
         </div>
         <div class="form-group">
           <label class="form-control-label">Dosage Modifications</label>
-          <input type="text" class="form-control" placeholder="dosageModifications" name="dosageModifications" [(ngModel)]="RegimenDetail.dosageModifications">
+          <ck-editor name="editor1" type="text" class="form-control" [(ngModel)]="RegimenDetail.dosageModifications" skin="moono-lisa" language="en"></ck-editor>
+<!--          <input type="text" class="form-control" placeholder="dosageModifications" name="dosageModifications" [(ngModel)]="RegimenDetail.dosageModifications">-->
         </div>
         <div class="form-group">
           <label class="form-control-label">Brand Names</label>
